Clear plugins after changing KNS entires

BUG: 382136
FIXED-IN: 5.20